# yaaps

./: .gitmodules  README.md  analyze.sh  combine.py  fpu_linear_solution.org  pyproject.toml  setup.py
athena_pp/: Simulation.py  athena_read.py
docs/: datatypes.md  decorations.md  examples.md  getting_started.md  input.md  parallel_utils.md  plot2D.md  plot_formatter.md  recipes2D.md  simulation.md  units.md
examples/: analyze_config.toml  b_phi_expample.py  batch_config.toml  derived_defs.py  derived_plot.py  diff_inputs.py  double_anim.py  parallel_anim.py  plot_hst.py  plot_vars.sh  postprocess_surface.py  simple_anim.py  simple_plot.py  yaaps.sh
tests/: test_scrape.py
yaaps/: Input.py  Plot2D.py  Simulation.py  __init__.py  athena_read.py  batch_plots.py  datatypes.py  decorations.py  input.py  parallel_utils.py  plot2D.py  plot_formatter.py  recipes2D.py  scrape.py  simulation.py  units.py
yaaps/surface/: __init__.py  h5_utils.py  surface_func.py
